--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,14 +28,18 @@ dist.jar=${dist.dir}/ConstruirSA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Asus\\Desktop\\ULP2023\\Segundo Cuatri\\Lab1\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0_1.jar=C:\\Users\\diaser\\Desktop\\TECNICATURA ULP\\Laboratorio 1 (JAVA) Recursada\\Acceso a Base de Datos\\Descarga Profe Luis\\mariadb-java-client-2.3.0_1.jar
 file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\Joaco\\Desktop\\mariadb-java-client-3.2.0.jar
 file.reference.mysql-connector-java-5.1.46-bin.jar=C:\\Users\\Asus\\Desktop\\ULP2023\\Segundo Cuatri\\Lab1\\mysql-connector-java-5.1.46-bin.jar
+file.reference.mysql-connector-java-5.1.46-bin_1.jar=C:\\Users\\diaser\\Desktop\\TECNICATURA ULP\\Laboratorio 1 (JAVA) Recursada\\Acceso a Base de Datos\\Descarga Profe Luis\\mysql-connector-java-5.1.46-bin_1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-2.3.0.jar}:\
     ${file.reference.mysql-connector-java-5.1.46-bin.jar}:\
-    ${file.reference.mariadb-java-client-3.2.0.jar}
+    ${file.reference.mariadb-java-client-3.2.0.jar}:\
+    ${file.reference.mariadb-java-client-2.3.0_1.jar}:\
+    ${file.reference.mysql-connector-java-5.1.46-bin_1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
